--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint -c .eslintrc --ext .ts ./src",
     "start": "electron ./dist/index.js"
   },
   "author": "akneller",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "electron": "^24.3.1",
-    "typescript": "^5.0.4",
-    "typescript-eslint": "^0.0.1-alpha.0"
+    "eslint": "^8.40.0",
+    "typescript": "^5.0.4"
   }
 }
